# rs-toolkit

./: .gitignore  Cargo.toml  config.toml  justfile
Excel Files/: MT_Adressen.xlsx  MT_Benutzer.xlsx  MT_Einrichtungen.xlsx  test.xlsx
libs/common/: Cargo.toml
libs/common/src/: config.rs  config_test.rs  lib.rs  logger.rs
libs/fuzzy_derive/: Cargo.toml
libs/fuzzy_derive/src/: lib.rs
src/: config.rs  excel.rs  logger.rs  main.rs
templates/tool/: Cargo.toml.tmpl  config.rs.tmpl  config_test.rs.tmpl  main.rs.tmpl
tools/excel-splitter/: Cargo.toml
tools/excel-splitter/src/: config.rs  config_test.rs  main.rs
tools/sql-file-renamer/: Cargo.toml
tools/sql-file-renamer/src/: config.rs  config_test.rs  io.rs  io_test.rs  main.rs  models.rs
