[package]
name = "ExcelSplitter"
version = "0.1.0"
edition = "2024"

[dependencies]
calamine = { version = "0.35.0", features = ["chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
