[workspace]
resolver = "3"
members = [
    "libs/*",
    "tools/*"
]
exclude = [
    "templates"
]

[workspace.package]
version = "0.1.0"
authors = ["Chris Nielsen <chris.rahbek.nielsen@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/rodhor/rs-toolkit"

[workspace.dependencies]
# Internal libs
common = {path = "libs/common"}
fuzzy_derive = {path = "libs/fuzzy_derive"}


# External libs
calamine = { version = "0.35.0", features = ["chrono"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.21"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
