[package]
name = "fuzzy_derive"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }


[dev-dependencies]
tempfile.workspace = true
