[package]
name = "sql-file-renamer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sql-file-renamer"
path = "src/main.rs"

[dependencies]
common.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
