[package]
name = "sql-file-renamer"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sql-file-renamer"
path = "src/main.rs"

[dependencies]
common.workspace = true
fuzzy_derive.workspace = true
glob = "0.3.3"
natord = "1.0.9"
serde.workspace = true
serde_with.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
